--- a/package.json
+++ b/package.json
@@ -19,17 +19,21 @@
     "@types/node": "^20.14.12",
     "@types/sequelize": "^4.28.20",
     "@types/uuid": "^10.0.0",
+    "aws-sdk": "^2.1668.0",
     "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
     "express": "^4.19.2",
     "jsonwebtoken": "^9.0.2",
     "multer": "^1.4.5-lts.1",
     "mysql2": "^3.10.3",
+    "nodemailer": "^6.9.14",
     "sequelize": "^6.37.3",
     "typescript": "^5.5.4",
     "uuid": "^10.0.0"
   },
   "devDependencies": {
+    "@types/aws-sdk": "^2.7.0",
+    "@types/nodemailer": "^6.4.15",
     "nodemon": "^3.1.4",
     "ts-node": "^10.9.2"
   }
